<resources>
    <string name="app_name">Baccus</string>
    <string name="action_settings">Ajustes</string>
    <string name="wine_image_description">Imagen que representa a un vino</string>
    <string name="reload">Recargar</string>
    <string name="choose_an_option">Elige una opción</string>
    <string name="fit">Ajustada</string>
    <string name="center">Centrada</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="title_activity_winery">Baccus</string>
</resources>
